[package]
name = "mycelium-bench"
version.workspace = true
description = "Honest benchmarking & evaluation harness (E-BENCH). Measures the existing execution backends — interpreter (trusted base), AOT env-machine, JIT, direct-LLVM, and the MLIR-dialect path (behind `mlir-dialect`) — over a shared v0-calculus program corpus, and ingests the LLM-harness quality/cost/latency reports. Emits a deterministic markdown + JSON report with an explicit WIN/LOSS/REGRESSION table and a 'where we're losing' section. Every number is Empirical (measured, with trial count); no pre-written performance target (VR-5). A differential divergence vs the interpreter is a recorded LOSS; an unlowerable node is a recorded capability LOSS (G2). Complements `xtask e1`/`kc4` (which time packing kernels / cert overhead); this harness times whole programs across backends and classifies wins vs losses."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[features]
# Forwarded to mycelium-mlir: turns on the real MLIR `ternary`->`arith`/`func`->LLVM dialect path so
# the harness can time/measure the `dialect::native` backend. OFF by default; the backend probes for
# the libMLIR toolchain at runtime and the harness records a graceful Skip when it is absent (so even
# `--features mlir-dialect` is green on a box without the tools). The default build measures interp,
# AOT env-machine, JIT, and direct-LLVM (the latter two skip gracefully without `llc`/`clang`).
mlir-dialect = ["mycelium-mlir/mlir-dialect"]

[dependencies]
# The execution backends under measurement (read-only — the harness measures them, never changes them).
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "781d3fcceba82acfe6b0eb46650513bd78a2416b" }
mycelium-interp = { git = "https://github.com/tzervas/mycelium-runtime", rev = "ab9cee665b620ed80ab74ea61ea639817dc49077" }
mycelium-mlir = { git = "https://github.com/tzervas/mycelium-codegen", rev = "f144d635e970257aee5b618f8cdfaa736e2c391d" }
mycelium-l1 = { git = "https://github.com/tzervas/mycelium-l1", rev = "cd32a1ed7ab7d2be38c9c3047da7318d182b7a1c" }
# The certified binary<->ternary swap engine the differential corpus exercises (same engine all paths use).
mycelium-cert = { git = "https://github.com/tzervas/mycelium-runtime", rev = "ab9cee665b620ed80ab74ea61ea639817dc49077" }
# The OS-thread Scheduler (M-709) driving the multicore scaling curves (measurement only — the
# scheduler itself is unmodified, read-only from this crate's perspective).
mycelium-std-runtime = { git = "https://github.com/tzervas/mycelium-std-runtime", rev = "b1770c4f8f8e00d948eb33b35b714378a13a7148" }
# Deterministic JSON for the machine-readable report + the LLM-harness report ingestion.
serde = { workspace = true }
serde_json = { workspace = true }

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-bench"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
