[package]
name = "mycelium-bench"
version.workspace = true
description = "Honest benchmarking & evaluation harness (E-BENCH). Measures the existing execution backends — interpreter (trusted base), AOT env-machine, JIT, direct-LLVM, and the MLIR-dialect path (behind `mlir-dialect`) — over a shared v0-calculus program corpus, and ingests the LLM-harness quality/cost/latency reports. Emits a deterministic markdown + JSON report with an explicit WIN/LOSS/REGRESSION table and a 'where we're losing' section. Every number is Empirical (measured, with trial count); no pre-written performance target (VR-5). A differential divergence vs the interpreter is a recorded LOSS; an unlowerable node is a recorded capability LOSS (G2). Complements `xtask e1`/`kc4` (which time packing kernels / cert overhead); this harness times whole programs across backends and classifies wins vs losses."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[features]
# Forwarded to mycelium-mlir: turns on the real MLIR `ternary`->`arith`/`func`->LLVM dialect path so
# the harness can time/measure the `dialect::native` backend. OFF by default; the backend probes for
# the libMLIR toolchain at runtime and the harness records a graceful Skip when it is absent (so even
# `--features mlir-dialect` is green on a box without the tools). The default build measures interp,
# AOT env-machine, JIT, and direct-LLVM (the latter two skip gracefully without `llc`/`clang`).
mlir-dialect = ["mycelium-mlir/mlir-dialect"]

[dependencies]
# The execution backends under measurement (read-only — the harness measures them, never changes them).
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "46d2515cbd86d2ae4d1365f4adcd2796737e9f0b" }
mycelium-interp = { git = "https://github.com/tzervas/mycelium-runtime", rev = "487b1e7049ff521b1a6fa33f376245089e7dc1e1" }
mycelium-mlir = { git = "https://github.com/tzervas/mycelium-codegen", rev = "505448cbfb5553a34aca726f0d1b884981a83631" }
mycelium-l1 = { git = "https://github.com/tzervas/mycelium-l1", rev = "2b92f54349eb0d4f67e32e983874df76908b9ab6" }
# The certified binary<->ternary swap engine the differential corpus exercises (same engine all paths use).
mycelium-cert = { git = "https://github.com/tzervas/mycelium-runtime", rev = "487b1e7049ff521b1a6fa33f376245089e7dc1e1" }
# The OS-thread Scheduler (M-709) driving the multicore scaling curves (measurement only — the
# scheduler itself is unmodified, read-only from this crate's perspective).
mycelium-std-runtime = { git = "https://github.com/tzervas/mycelium-std-runtime", rev = "297d69e42a468adfeb582ea425a10887674ef4cb" }
# Deterministic JSON for the machine-readable report + the LLM-harness report ingestion.
serde = { workspace = true }
serde_json = { workspace = true }

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-bench"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
